--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: CI/CD Pipeline
-
 on:
   push:
     branches:
@@ -7,65 +6,45 @@ on:
   pull_request:
     branches:
       - main
-
 permissions:
   contents: read
   id-token: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
-
       - name: Install Dependencies
         run: |
           go mod tidy
           go build -v ./...
-
       - name: Run Tests
         run: |
           go test -v ./...
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
-      - name: Debug Environment
-        run: |
-          if [ -z "${{ secrets.GCP_CREDENTIALS }}" ]; then
-            echo "GCP_CREDENTIALS is not set"
-          else
-            echo "GCP_CREDENTIALS is set"
-          fi
-
       - name: Authenticate to GCP
+        id: auth
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-
-      - name: Check gcloud Installation
-        run: |
-          gcloud --version
-          echo "Gcloud is installed and available"
-
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT }}
+          # Or use the credentials_json option (choose one approach)
+          # credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
       - name: Set GCP Project
         run: gcloud config set project ornate-crossbar-450707-p6
-
       - name: Verify GCP Configuration
         run: gcloud config list
-
       - name: Deploy to GCP
         run: gcloud app deploy --quiet
-
