--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.21'  # Updated to Go 1.21
       - name: Install Dependencies
         run: |
           go mod tidy
@@ -96,7 +96,7 @@ jobs:
           if [ ! -f app.yaml ]; then
             echo "Creating app.yaml file..."
             cat > app.yaml << 'EOL'
-          runtime: go120  # Using Go 1.20 runtime
+          runtime: go121  # Using Go 1.21 runtime (latest supported)
           
           service: default  # Use 'default' service or replace with your specific service name
           
